# campaign-creator

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  prompts_export.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  campaign.py  pages.py
app/core/: config.py
app/data/master_personas/: m01.json  m02.json  m03.json
app/models/: __init__.py  campaign.py  diagnosis.py  persona.py  plan.py  question.py
app/prompts/en/: analyze_diagnosis.md  content_bing_ads.md  content_email.md  content_linkedin.md  generate_plan.md  parse_brief.md  persona_discovery.md  persona_vp_questions.md  question_discovery.md  recheck_attribution.md  recheck_comparison.md  vp_generation.md
app/prompts/zh/: analyze_diagnosis.md  content_baidu_feed.md  content_baidu_sem.md  content_bilibili.md  content_csdn.md  content_email.md  content_wechat.md  content_zhihu_long.md  content_zhihu_qa.md  generate_plan.md  parse_brief.md  persona_discovery.md  persona_vp_questions.md  question_discovery.md  recheck_attribution.md  recheck_comparison.md  (+1 more)
app/services/: content_service.py  diagnosis_parser.py  export_service.py  llm_router.py  persona_service.py  plan_service.py
app/utils/: file_handler.py  json_parser.py
docs/: CURRENT-STATE.md  FIX-PLAN.md  REVIEW-FINDINGS.md
static/css/: app.css
static/js/: app.js
templates/: base.html  tab_brief.html  tab_content_studio.html  tab_diagnosis.html  tab_persona.html  tab_plan.html
templates/partials/: loading.html
tests/: test_content_service.py  test_json_parser.py  test_regression_guards.py  test_utils.py
(+6 files in other folders)
