[project]
name = "campaign-factory"
version = "0.1.0"
description = "Campaign Factory — AI-powered marketing campaign planning system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "google-cloud-aiplatform>=1.71.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "python-multipart>=0.0.12",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
